# tee-subprocess

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
subprocess_tee/: __init__.py
tee_subprocess/: __init__.py  subprocess.py
tests/: test_tee.py
