[project]
name = "tee-subprocess"
version = "0.1.0"
description = "A subprocess replacement with tee support for both synchronous and asynchronous contexts."
authors = [
    {name = "Elias Gabriel",email = "me@eliasfgabriel.com"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

dependencies = []

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
]

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.pyright]
ignore = [ "tests" ]

[tool.ruff]
extend-select = ["I", "B", "ASYNC"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
