[project]
name = "tee-subprocess"
version = "1.0.0.post0"
description = "A subprocess replacement with tee support for both synchronous and asynchronous contexts."
authors = [
    {name = "Elias Gabriel",email = "me@eliasfgabriel.com"},
]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.8"
dependencies = []

[project.urls]
documentation = "https://github.com/thearchitector/tee-subprocess"
repository = "https://github.com/thearchitector/tee-subprocess"
changelog = "https://github.com/thearchitector/tee-subprocess/blob/main/CHANGELOG.md"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
]

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.pyright]
ignore = [ "tests" ]

[tool.ruff]
extend-select = ["I", "B", "ASYNC"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
